--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         .header-logo-bg {
             width: 100px; /* Largura da div que conterá a imagem */
             height: 100px; /* Altura da div que conterá a imagem */
-            background-image: url('Logo PABE.jpg'); /* <<<< NOME DO ARQUIVO COM L MAIÚSCULO, P MAIÚSCULO E ESPAÇO */
+            background-image: url('Logo PABE.jpg'); /* NOME DO ARQUIVO COM L MAIÚSCULO, P MAIÚSCULO E ESPAÇO */
             background-size: contain; /* Ajusta a imagem para caber na div */
             background-repeat: no-repeat; /* Evita que a imagem se repita */
             background-position: center; /* Centraliza a imagem na div */
@@ -207,18 +207,18 @@
             margin-bottom: 40px; /* Espaço maior após o último item da lista */
         }
 
-        /* Estilo da Imagem da Seção Principal */
-        .page-image {
+        /* REMOVIDO: ESTILO DA IMAGEM DA SEÇÃO PRINCIPAL (page-image) */
+        /* .page-image {
             width: 100%;
             height: 400px;
             object-fit: cover;
             border-radius: 12px;
             margin-bottom: 40px;
             box-shadow: 0 6px 18px rgba(0,0,0,0.05);
-            background-image: url('image_0cd7e4.png'); /* <<<< Certifique-se de que esta imagem está na raiz do seu GitHub */
+            background-image: url('image_0cd7e4.png');
             background-size: cover;
             background-position: center;
-        }
+        } */
 
         /* Chamada para Ação (CTA) */
         .call-to-action {
@@ -343,9 +343,7 @@
             ul li:last-child {
                 margin-bottom: 30px; /* Ajuste para telas menores */
             }
-            .page-image {
-                height: 250px;
-            }
+            /* REMOVIDO: .page-image { ... } */
             .call-to-action {
                 padding: 30px 20px;
             }
@@ -387,9 +385,7 @@
             ul li:last-child {
                 margin-bottom: 20px; /* Ajuste para telas menores */
             }
-            .page-image {
-                height: 180px;
-            }
+            /* REMOVIDO: .page-image { ... } */
             .call-to-action {
                 padding: 30px 20px;
             }
@@ -420,8 +416,6 @@
 </nav>
 
 <section id="inicio" class="container">
-    <div class="page-image"></div> 
-
     <h2>🎯 Seu Caminho para o Bem-Estar e Crescimento!</h2>
     <p>
         O **TREINAMENTO PABE** é uma jornada transformadora focada em te equipar com **Práticas** eficientes, fortalecer sua **Atitude** positiva e promover um profundo **Bem-Estar**. Descubra um espaço de aprendizado e desenvolvimento para aplicar a Psicologia Positiva no seu dia a dia.
