--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
         /* Seções de Conteúdo */
         section {
             margin-bottom: 60px;
-            padding: 50px 0;
+            /* ALTERADO: Reduzido o padding-top para o conteúdo "subir" */
+            padding: 30px 0 50px 0; /* Top, Right, Bottom, Left */
             background-color: var(--white);
             border-radius: 12px;
             box-shadow: 0 6px 15px rgba(0,0,0,0.05);
@@ -316,7 +317,8 @@
                 max-width: 200px;
             }
             section {
-                padding: 40px 15px;
+                /* ALTERADO: Ajuste de padding para telas menores */
+                padding: 20px 15px; /* Reduzido o padding superior */
                 margin-top: 25px;
             }
             section h2 {
