--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 <header>
     <div class="container header-content">
         <div class="header-logo-bg"></div> 
-        <h1>TREINAMENTO PABE<span>Práticas, Atitude e Bem-Estar</span></h1> 
+        <h1>TREINAMENTO PABE<span>Práticas &gt; Atitude &gt; Bem-Estar</span></h1> 
     </div>
 </header>
 
