--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TREINAMENTO PABE: Práticas &gt; Atitude &gt; Bem-Estar</title> <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <title>TREINAMENTO PABE: Práticas &gt; Atitude &gt; Bem-Estar</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <style>
         /* Cores Neutras e Profissionais para PABE */
         :root {
@@ -402,7 +403,7 @@
 </head>
 <body>
 
-<header>
+<div id="top-of-page"></div> <header>
     <div class="container header-content">
         <div class="header-logo-bg"></div> 
         <h1>TREINAMENTO PABE<span>Práticas &gt; Atitude &gt; Bem-Estar</span></h1> 
@@ -411,13 +412,11 @@
 
 <nav>
     <div class="container">
-        <a href="#inicio">Início</a>
-        <a href="#contato">Contato</a>
+        <a href="#top-of-page">Início</a> <a href="#contato">Contato</a>
     </div>
 </nav>
 
-<section id="inicio" class="container">
-    <h2>🎯 Seu Caminho para o Bem-Estar e Crescimento!</h2>
+<section class="container"> <h2>🎯 Seu Caminho para o Bem-Estar e Crescimento!</h2>
     <p>
         O **TREINAMENTO PABE** é uma jornada transformadora focada em te equipar com **Práticas** eficientes, fortalecer sua **Atitude** positiva e promover um profundo **Bem-Estar**. Descubra um espaço de aprendizado e desenvolvimento para aplicar a Psicologia Positiva no seu dia a dia.
     </p>
