--- a/index.html
+++ b/index.html
@@ -44,31 +44,18 @@
             text-align: center;
             padding: 50px 0;
             box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-            display: flex; /* Adicionado para alinhar imagem e texto */
-            flex-direction: column; /* Coloca os itens em coluna por padrão */
+            display: flex; 
+            flex-direction: column; 
             align-items: center; /* Centraliza os itens horizontalmente */
             justify-content: center; /* Centraliza os itens verticalmente */
         }
 
         .header-content {
-            display: flex; /* Para alinhar a imagem e o texto do título lado a lado */
-            align-items: center; /* Centraliza verticalmente a imagem e o texto */
-            justify-content: center; /* Centraliza horizontalmente */
-            flex-wrap: wrap; /* Permite quebrar linha em telas pequenas */
-            gap: 20px; /* Espaçamento entre os itens */
-            max-width: 100%; /* Garante que não ultrapasse a largura do contêiner */
+            /* AJUSTADO: Removido flexbox para que o h1 e p se empilhem naturalmente e sejam centralizados pelo parent header */
+            max-width: 100%;
         }
 
-        /* ESTILO PARA A LOGO COMO BACKGROUND-IMAGE */
-        .header-logo-bg {
-            width: 100px; /* Largura da div que conterá a imagem */
-            height: 100px; /* Altura da div que conterá a imagem */
-            background-image: url('Logo PABE.jpg'); /* NOME DO ARQUIVO COM L MAIÚSCULO, P MAIÚSCULO E ESPAÇO */
-            background-size: contain; /* Ajusta a imagem para caber na div */
-            background-repeat: no-repeat; /* Evita que a imagem se repita */
-            background-position: center; /* Centraliza a imagem na div */
-            margin-bottom: 0; /* Remove margem inferior padrão */
-        }
+        /* ESTILO PARA A LOGO COMO BACKGROUND-IMAGE - REMOVIDO */
 
         header h1 {
             margin: 0;
@@ -79,7 +66,7 @@
             text-shadow: 2px 2px 4px rgba(0,0,0,0.08);
             line-height: 1.2;
             color: var(--main-title-color);
-            text-align: left; /* Ajuste para o texto dentro do bloco */
+            text-align: center; /* Ajustado para centralizar o texto dentro do h1 */
         }
         header h1 span {
             display: block;
@@ -90,7 +77,7 @@
             white-space: nowrap; /* Tenta manter o subtítulo em uma linha, se possível */
         }
 
-        /* NOVO ESTILO: Nomes das treinadoras */
+        /* Nomes das treinadoras */
         .trainers-names {
             font-family: 'Montserrat', sans-serif;
             font-size: 1.4rem;
@@ -134,7 +121,6 @@
         /* Seções de Conteúdo */
         section {
             margin-bottom: 60px;
-            /* ALTERADO: Reduzido o padding-top para o conteúdo "subir" */
             padding: 30px 0 50px 0; /* Top, Right, Bottom, Left */
             background-color: var(--white);
             border-radius: 12px;
@@ -219,19 +205,6 @@
             margin-bottom: 40px; /* Espaço maior após o último item da lista */
         }
 
-        /* REMOVIDO: ESTILO DA IMAGEM DA SEÇÃO PRINCIPAL (page-image) */
-        /* .page-image {
-            width: 100%;
-            height: 400px;
-            object-fit: cover;
-            border-radius: 12px;
-            margin-bottom: 40px;
-            box-shadow: 0 6px 18px rgba(0,0,0,0.05);
-            background-image: url('image_0cd7e4.png');
-            background-size: cover;
-            background-position: center;
-        } */
-
         /* Chamada para Ação (CTA) */
         .call-to-action {
             text-align: center;
@@ -291,10 +264,6 @@
             header h1 span {
                 font-size: 1.6rem;
             }
-            .header-logo-bg { /* Ajuste para a nova classe da logo */
-                width: 80px;
-                height: 80px;
-            }
             .trainers-names { /* Ajuste responsivo */
                 font-size: 1.2rem;
             }
@@ -312,18 +281,11 @@
                 font-size: 1.4rem;
                 white-space: normal;
             }
-            .header-logo-bg { /* Ajuste para a nova classe da logo */
-                width: 70px;
-                height: 70px;
-            }
-            .header-content {
-                flex-direction: column;
-                gap: 15px;
-            }
             .trainers-names { /* Ajuste responsivo */
                 font-size: 1.1rem;
                 margin-top: 10px;
             }
+            /* Removido ajuste de flexbox do header-content para telas menores */
             nav {
                 padding: 12px 0;
             }
@@ -335,8 +297,7 @@
                 max-width: 200px;
             }
             section {
-                /* ALTERADO: Ajuste de padding para telas menores */
-                padding: 20px 15px; /* Reduzido o padding superior */
+                padding: 20px 15px; 
                 margin-top: 25px;
             }
             section h2 {
@@ -361,9 +322,8 @@
                 font-size: 1.4rem;
             }
             ul li:last-child {
-                margin-bottom: 30px; /* Ajuste para telas menores */
+                margin-bottom: 30px;
             }
-            /* REMOVIDO: .page-image { ... } */
             .call-to-action {
                 padding: 30px 20px;
             }
@@ -386,10 +346,6 @@
             header h1 span {
                 font-size: 1.1rem;
             }
-            .header-logo-bg { /* Ajuste para a nova classe da logo */
-                width: 60px;
-                height: 60px;
-            }
             .trainers-names { /* Ajuste responsivo */
                 font-size: 1rem;
             }
@@ -406,9 +362,8 @@
                 font-size: 1.2rem;
             }
             ul li:last-child {
-                margin-bottom: 20px; /* Ajuste para telas menores */
+                margin-bottom: 20px;
             }
-            /* REMOVIDO: .page-image { ... } */
             .call-to-action {
                 padding: 30px 20px;
             }
@@ -428,9 +383,9 @@
 
 <header>
     <div class="container header-content">
-        <div class="header-logo-bg"></div> 
         <h1>TREINAMENTO PABE<span>Práticas &gt; Atitude &gt; Bem-Estar</span></h1> 
-        <p class="trainers-names">Waleska Cruz e Cybele Lassandro</p> </div>
+        <p class="trainers-names">Waleska Cruz e Cybele Lassandro</p>
+    </div>
 </header>
 
 <nav>
