--- a/index.html
+++ b/index.html
@@ -51,11 +51,8 @@
         }
 
         .header-content {
-            /* AJUSTADO: Removido flexbox para que o h1 e p se empilhem naturalmente e sejam centralizados pelo parent header */
             max-width: 100%;
         }
-
-        /* ESTILO PARA A LOGO COMO BACKGROUND-IMAGE - REMOVIDO */
 
         header h1 {
             margin: 0;
@@ -66,7 +63,7 @@
             text-shadow: 2px 2px 4px rgba(0,0,0,0.08);
             line-height: 1.2;
             color: var(--main-title-color);
-            text-align: center; /* Ajustado para centralizar o texto dentro do h1 */
+            text-align: center; 
         }
         header h1 span {
             display: block;
@@ -74,7 +71,7 @@
             font-weight: 600;
             margin-top: 10px;
             color: var(--main-title-color);
-            white-space: nowrap; /* Tenta manter o subtítulo em uma linha, se possível */
+            white-space: nowrap; 
         }
 
         /* Nomes das treinadoras */
@@ -83,8 +80,8 @@
             font-size: 1.4rem;
             font-weight: 600;
             color: var(--text-dark);
-            margin-top: 15px; /* Espaço acima dos nomes */
-            margin-bottom: 0; /* Remover margem inferior padrão do p */
+            margin-top: 15px; 
+            margin-bottom: 0; 
             text-align: center;
         }
 
@@ -121,7 +118,7 @@
         /* Seções de Conteúdo */
         section {
             margin-bottom: 60px;
-            padding: 30px 0 50px 0; /* Top, Right, Bottom, Left */
+            padding: 30px 0 50px 0; 
             background-color: var(--white);
             border-radius: 12px;
             box-shadow: 0 6px 15px rgba(0,0,0,0.05);
@@ -174,7 +171,7 @@
         ul {
             list-style: none;
             padding-left: 0;
-            margin-bottom: 30px; /* Margem padrão da lista */
+            margin-bottom: 30px; 
         }
 
         ul li {
@@ -202,7 +199,7 @@
         }
 
         ul li:last-child {
-            margin-bottom: 40px; /* Espaço maior após o último item da lista */
+            margin-bottom: 40px; 
         }
 
         /* Chamada para Ação (CTA) */
@@ -242,6 +239,32 @@
             transform: translateY(-4px);
         }
 
+        /* NOVO ESTILO: Container para múltiplos botões de WhatsApp */
+        .whatsapp-buttons-container {
+            display: flex;
+            flex-direction: column; /* Empilha os botões verticalmente */
+            align-items: center;   /* Centraliza os botões horizontalmente */
+            gap: 15px;             /* Espaço entre os botões */
+            margin-top: 25px;      /* Espaço do texto de instrução acima */
+            margin-bottom: 30px;   /* Espaço antes da nota abaixo */
+        }
+
+        /* NOVO ESTILO: Texto de instrução para os botões */
+        .whatsapp-instruction {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1.6rem; 
+            font-weight: 600;
+            color: var(--text-dark);
+            margin-bottom: 0; /* A margem é controlada pelo container dos botões */
+        }
+
+        /* NOVO ESTILO: Nota pequena abaixo dos botões */
+        .whatsapp-note {
+            font-size: 0.9rem !important; /* Sobrescreve o tamanho padrão do p */
+            margin-top: 20px !important; /* Sobrescreve a margem padrão do p */
+            color: var(--text-light) !important; 
+        }
+
         /* Rodapé */
         footer {
             text-align: center;
@@ -264,8 +287,11 @@
             header h1 span {
                 font-size: 1.6rem;
             }
-            .trainers-names { /* Ajuste responsivo */
+            .trainers-names { 
                 font-size: 1.2rem;
+            }
+            .whatsapp-instruction { /* Ajuste responsivo */
+                font-size: 1.4rem;
             }
         }
 
@@ -281,11 +307,10 @@
                 font-size: 1.4rem;
                 white-space: normal;
             }
-            .trainers-names { /* Ajuste responsivo */
+            .trainers-names { 
                 font-size: 1.1rem;
                 margin-top: 10px;
             }
-            /* Removido ajuste de flexbox do header-content para telas menores */
             nav {
                 padding: 12px 0;
             }
@@ -334,6 +359,9 @@
                 font-size: 1.2rem;
                 padding: 14px 28px;
             }
+            .whatsapp-instruction { /* Ajuste responsivo */
+                font-size: 1.2rem;
+            }
         }
 
         @media (max-width: 480px) {
@@ -346,7 +374,7 @@
             header h1 span {
                 font-size: 1.1rem;
             }
-            .trainers-names { /* Ajuste responsivo */
+            .trainers-names { 
                 font-size: 1rem;
             }
             section h2 {
@@ -373,6 +401,9 @@
             .btn-whatsapp {
                 font-size: 1rem;
                 padding: 10px 20px;
+            }
+            .whatsapp-instruction { /* Ajuste responsivo */
+                font-size: 1rem;
             }
         }
     </style>
@@ -417,10 +448,16 @@
 
 <section id="contato" class="call-to-action container">
     <p>✨ Pronto para iniciar sua jornada PABE?</p>
-    <a class="btn-whatsapp" href="https://wa.me/seunumerodetelefone" target="_blank" rel="noopener">
-        Fale Conosco pelo WhatsApp
-    </a>
-    <p style="font-size: 0.9rem; margin-top: 20px; color: rgba(0,0,0,0.6);">Substitua "seunumerodetelefone" no link do WhatsApp pelo seu número com o código do país (ex: 5521912345678).</p>
+    <p class="whatsapp-instruction">Fale conosco pelos telefones:</p>
+    <div class="whatsapp-buttons-container">
+        <a class="btn-whatsapp" href="https://wa.me/5541988180624" target="_blank" rel="noopener">
+            WhatsApp Waleska Cruz (41) 98818-0624
+        </a>
+        <a class="btn-whatsapp" href="https://wa.me/5541988180625" target="_blank" rel="noopener">
+            WhatsApp Cybele Lassandro (41) 98818-0625
+        </a>
+    </div>
+    <p class="whatsapp-note">Clique no número desejado para iniciar a conversa.</p>
 </section>
 
 <footer>
